force-app/main/default/objects/Referrer__c/Referrer__c.object-meta.xml
<CustomObject>
    <label>Referrer</label>
    <nameField>
        <label>Referrer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referrers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>