force-app/main/default/objects/Referrer__c/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Name</label>
    <referenceTo>Master__c</referenceTo>
    <relationshipLabel>Referrers</relationshipLabel>
    <relationshipName>Referrers</relationshipName>
    <type>Lookup</type>
</CustomField>