force-app/main/default/objects/Referrer__c/fields/Referral_Program__c.field-meta.xml
<CustomField>
    <fullName>Referral_Program__c</fullName>
    <label>Referral Program</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ambassador</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Field agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>